# fifawc2026-traveldistance

./: .gitignore  CNAME  README.md  _config.yml  dashboard.md  executive-summary.md  index.md  methodology.md  process.md  pyproject.toml
data/processed/: travel_distances.json
data/raw/: fifaworldcup2026-basecamps.csv  fifaworldcup2026-groupstage.csv
docs/: _config.yml  dashboard.html  index.html  index.md  methodology.html  process.html  process.md
docs/css/: style.css
docs/data/: travel_distances.json
docs/js/: chart.js  main.js
scripts/: export_static_chart.py  process_data.py
